2006-11-08  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/formats/gamessformat.cpp: Bug fixes after further testing.

	* src/formats/gamessformat.cpp: For now keywords are in uppercase.  This
	needs to be decided on by the dev community and will be discussed with
	the gamess developers for gamess-specific keywords.

	* src/formats/ghemicalformat.cpp: Read GAMESS info from the "gamess"
	namespace

	* src/generic.h: Added GetData(const char *s) to OBSetData
	so that you can retrieve data from a const char rather than
	having to instanciate a string.

	* src/formats/gamessformat.cpp: More improvements on reading generic
	computational meta data.  (added runtyp / dfttype / basis).  Also modified
	the location of gamess extra information.  Gamess now stores it's
	information in an OBSetData with attribute "gamess" which is part of the
	molecule.

2006-11-07 Chris Morley <ob@gaseq.co.uk>

	* src/formats/xml/cmlformat.cpp(WriteMolecule): Output new
	namespace URL rather than the old one.
	
	* src/obutil.cpp; Remove static from Solvelinear() and 
	SolveQuadratic() so that would compile on VC8.
	
	* windows-vc2005/babelconfig.h; Extra macro definitions.
	
	* windows-vc2005/libinchi.dll  windows-vc2005/libinchi.lib
	1.01 versions from NIST

2006-11-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/main.cpp, src/obutil.cpp, src/fingerprints/finger3.cpp,
	src/format/fastsearchformat.cpp: Patch from Martin Vogt to address
	PR#1590609. Crashes due to incorrect handling of string parsing on
	64-bit platforms.

2006-11-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, Makefile.in: Add back support for
	optional compile of wxWidget GUI in src/GUI.

	* scripts/*: Split openbabel.i into individual copies for each
	language.

	* scripts/java/*: Initial attempt at a java interface from SWIG. Untested.

2006-10-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/molreport.cpp: New psuedo-format to generate atom